One more html file where changes made

--- a/infinite.htm
+++ b/infinite.htm
@@ -14,7 +14,7 @@
     img{
         width: 300px;
         height: 300px;
-        margin: 3px;
+        margin: 4px;
     } 
     </style>
 </head>
@@ -41,9 +41,9 @@ for (let i = 0; i < num; i++) {
             console.log(error)
         })
 }
-// no things array required
+// no things of array is required
 }
-getRandom(12)
+getRandom(13)
 
     </script>
 </body>
