Just QR code of html changes

--- a/qrcodes.htm
+++ b/qrcodes.htm
@@ -73,10 +73,10 @@ body {
 
 .error {
   border: 1px solid red;
-  animation: shake 0.1s linear 6;
+  animation: shakes 0.1s linear 6;
 }
 
-@keyframes shake {
+@keyframes shakes {
   0% {
     transform: translateX(0);
   }
