bootstrap file modified

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -24,6 +24,40 @@
       <div class="border border-secondary p-1">
         <h1 class="border border-danger container">Hello world</h1>
       </div>
+	<br />
+	 <div class="display-1">hello</div>
+<div class="display-2">hello</div>
+<div class="display-3">hello</div>
+<div class="display-4">hello</div>
+<div class="display-5">hello</div>
+<!--<div class="display-6">hello</div>-->
+<h1>hello</h1>
+<h2>hello</h2>
+<h3>hello</h3>
+<h4>hello</h4>
+<h5>hello</h5>
+<h6>hello</h6>
+<br />
+<p class="text-justify">
+  You should focus on <span class="text-primary"> Data Structures and system design concepts</span>. And obviously having a good hand at DP also helps. Solve problems on  <span class="text-capitalize">leet code</span>. It would help you to understand and  <span class="text-danger"> improve your problem solving skills</span>. Even though FrontEnd-Developer role doesn't require all this but as per my experience they do ask you questions related to above when you qualify after round 1 technical.</p>
+
+      <!-- list-group-item-primary and list-group-item-secondary -->
+      <h2 class="">Mern stack lists:</h2>
+      <ul class="list-group">
+  <li class="list-group-item  bg-primary text-white">Mongodb</li>
+  <li class="list-group-item bg-secondary text-white">Express js</li>
+  <li class="list-group-item list-group-item-primary">React js</li>
+  <li class="list-group-item list-group-item-secondary">Node js</li>
+</ul>
+<br /> <br />
+
+<h2>List group with linked items</h2>
+<div class="list-group">
+  <a href="#" class="list-group-item link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover active">First item</a>
+  <a href="#" class="list-group-item disabled">second item</a>
+  <a href="https://www.glassdoor.co.in/Community/" class="list-group-item">Third item</a>
+</div>
+
       <script src="script.js"></script>
   </body>
 </html>
